test/org/midica/testfiles/failing/inc/st-incl-5.midica





FUNCTION test5
	
	{
	
	}
	
	CALL test2(dur=-2,l1=bbb,??) quantity=2  ,     m
	
	
END